[tool.ruff]
line-length = 120

[tool.mypy]
strict = true

[tool.poetry]
name = "byte-deep-learning-24-cv"
version = "0.1.0"
description = ""
authors = ["AndBoyS <andboyxd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
jupyter = "^1.0.0"
Pillow = "^9.2.0"
numpy = "^1.23.4"
pandas = "^1.5.1"
seaborn = "^0.12.1"
opencv-contrib-python = "^4.6.0.66"
scikit-learn = "^1.1.3"
mypy = "^1.3.0"
ruff = "^0.1.3"
albumentations = "^1.4.1"
torchvision = "^0.17.1"
timm = "^0.9.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
